Bug 404648 - [1.8][compiler] investigate differences between ECJ & Javac
- try to run against javac11-ea

Change-Id: Ib1272d0fbca696f1b69f902af04d90f4219e1da4